force-app/main/default/objects/Car_Parking_Allotment__c/Car_Parking_Allotment__c.object-meta.xml
<CustomObject>
    <description>this is to store the car parking allotment</description>
    <label>Car Parking Allotment</label>
    <nameField>
        <label>Parking No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Car Parking Allotments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>