force-app/main/default/objects/Car_Parking_Allotment__c/fields/Allotment_Type__c.field-meta.xml
<CustomField>
    <fullName>Allotment_Type__c</fullName>
    <label>Allotment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Temporary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>