force-app/main/default/objects/Car_Parking_Allotment__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Car Parking Allotments</relationshipLabel>
    <relationshipName>Car_Parking_Allotments</relationshipName>
    <type>Lookup</type>
</CustomField>