force-app/main/default/objects/Car_Parking_Allotment__c/fields/Facing_Type__c.field-meta.xml
<CustomField>
    <fullName>Facing_Type__c</fullName>
    <label>Facing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>