force-app/main/default/objects/Car_Parking_Allotment__c/fields/level__c.field-meta.xml
<CustomField>
    <fullName>level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B1</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>B3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>