force-app/main/default/objects/Car_Parking_Allotment__c/fields/Parking_Type__c.field-meta.xml
<CustomField>
    <fullName>Parking_Type__c</fullName>
    <label>Parking Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tandem Open</fullName>
            </value>
            <value>
                <fullName>Tandem Covered</fullName>
            </value>
            <value>
                <fullName>Stilt</fullName>
            </value>
            <value>
                <fullName>Single Open</fullName>
            </value>
            <value>
                <fullName>Single Covered</fullName>
            </value>
            <value>
                <fullName>MLCP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>