force-app/main/default/objects/Car_Parking_Allotment__c/fields/Permanent_Allocation_date__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Allocation_date__c</fullName>
    <label>Permanent Allocation date</label>
    <type>Date</type>
</CustomField>