force-app/main/default/objects/Car_Parking_Allotment__c/fields/ProjectName__c.field-meta.xml
<CustomField>
    <fullName>ProjectName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Car Parking Allotments</relationshipLabel>
    <relationshipName>Car_Parking_Allotments</relationshipName>
    <type>Lookup</type>
</CustomField>