force-app/main/default/objects/Car_Parking_Allotment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>level__c</columns>
    <columns>Parking_Type__c</columns>
    <columns>Tower_Name__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>